# TrailMark

./: .gitignore  CLAUDE.md  README.md
apps/api/: auth.py  conftest.py  main.py  pyproject.toml
apps/api/crypto/: hasher.py  signer.py
apps/api/db/: connection.py
apps/api/models/: attestation.py  audit_entry.py  policy.py
apps/api/routers/: attestations.py  chain.py  entries.py  ingest.py  policies.py  replay.py  reports.py
apps/api/services/: attestation.py  ledger.py  policy.py  replay.py  reports.py
apps/api/tests/: test_api.py  test_attestations.py  test_hasher.py  test_ledger.py  test_policies.py  test_replay.py  test_reports.py  test_signer.py
apps/web/: .env.example  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/(dashboard)/: layout.tsx  page.tsx
apps/web/components/audit/: AuditLedgerTable.tsx  ChainIntegrityBadge.tsx  EntryDetailPanel.tsx  PolicyReplayViewer.tsx  RiskScoreBadge.tsx  StatusBadge.tsx
apps/web/components/nav/: PendingReviewBadge.tsx
apps/web/components/policies/: PolicyRegistry.tsx  PolicyUploadModal.tsx
apps/web/components/reports/: ReportGeneratorPanel.tsx
apps/web/components/supervisor/: AttestationModal.tsx  AttestationQueue.tsx
apps/web/components/ui/: button.tsx  dialog.tsx  input.tsx  select.tsx  sheet.tsx  textarea.tsx
apps/web/lib/: api-client.ts  server-auth.ts  types.ts  utils.ts
database/: schema.sql
infrastructure/: docker-compose.yml
infrastructure/aws/: s3-worm-setup.py
scripts/: seed_demo.py  setup.sh
(+8 files in other folders)
