[project]
name = "trailmark-api"
version = "0.1.0"
description = "TrailMark ledger API — compliance-grade audit trail for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.30",
    "boto3>=1.34",
    "cryptography>=43.0",
    "pydantic>=2.7",
    "python-ulid>=2.7",
    "pyjwt[crypto]>=2.9",
    "reportlab>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pypdf>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
